--- a/BerlinClock.csproj
+++ b/BerlinClock.csproj
@@ -50,6 +50,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BDD\BerlinClockFeatureSteps.cs" />
+    <Compile Include="Classes\Hour.cs" />
+    <Compile Include="Classes\Minute.cs" />
+    <Compile Include="Classes\Second.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BDD\BerlinClockFeatureSteps.feature.cs">
       <AutoGen>True</AutoGen>
